Finalizacion temporal del archivo index.html

--- a/index.html
+++ b/index.html
@@ -38,11 +38,115 @@
         </section>
     </article>
 
-    <article class="ui-box-2"></article>
+    <article class="ui-box-2">
+        <header>
+            <h2 class="second-ui-title">Stats</h2>
+            <button class="stats-button">
+                <p>All Time</p>
+                <img src="" alt="" class="arrow-down">
+            </button>
+        </header>
 
-    <article class="ui-box-3"></article>
+        <section class="earnings-section">
+            <h3 class="earnings-title">Earning</h3>
+            <p class="amount-earn">$9,787<span>.32</span></p>
+            <p class="month-earned"><span>+$2,456.12</span> since last month</p>
+        </section>
 
-    <article class="ui-box-4"></article>
+        <section class="data-section">
+            <div class="projects-clients">
+                <p><span>36</span> projects</p>
+                <p><span>5</span> this month</p>
+            </div>
+
+            <div class="projects-clients">
+                <p><span>10</span> clients</p>
+                <p><span>3</span> this month</p>
+            </div>
+
+            <div class="freelance-place">
+                <p>5th place</p>
+                <p>top-hire freelances</p>
+                <img src="" alt="">
+            </div>
+        </section>
+
+        <footer>
+            <p>Availability</p>
+            <div class="colors-container">
+                <div class="color-gradient-1"></div>
+                <div class="color-gradient-2"></div>
+                <div class="color-gradient-3"></div>
+                <div class="color-gradient-4"></div>
+                <div class="color-gradient-5"></div>
+                <div class="color-gradient-6"></div>
+                <div class="color-gradient-7"></div>
+                <div class="color-gradient-8"></div>
+                <div class="color-gradient-9"></div>
+                <div class="color-gradient-10"></div>
+                <div class="color-gradient-11"></div>
+                <div class="color-gradient-12"></div>
+                <div class="color-gradient-13"></div>
+                <div class="color-gradient-14"></div>
+                <div class="color-gradient-15"></div>
+                <div class="color-gradient-16"></div>
+                <div class="color-gradient-17"></div>
+                <div class="color-gradient-18"></div>
+                <div class="color-gradient-19"></div>
+                <div class="color-gradient-20"></div>
+                <div class="color-gradient-21"></div>
+                <div class="color-gradient-22"></div>
+                <div class="color-gradient-23"></div>
+                <div class="color-gradient-24"></div>
+                <div class="color-gradient-25"></div>
+                <div class="color-gradient-26"></div>
+                <div class="color-gradient-27"></div>
+                <div class="color-gradient-28"></div>
+                <div class="color-gradient-29"></div>
+                <div class="color-gradient-30"></div>
+            </div>
+
+            <p>100h/month</p>
+        </footer>
+    </article>
+
+    <article class="ui-box-3">
+        <img src="" alt="">
+        <h2>Get new clientes 2x faster</h2>
+        <p>Join us today and unlock opportunities to land new clientes twice as fast!</p>
+        <button>Join now</button>
+    </article>
+
+    <article class="ui-box-4">
+        <header>
+            <h2>Income</h2>
+            <button>
+                <p>Monthly</p>
+                <img src="" alt="">
+            </button>
+        </header>
+
+        <div class="income-distribution">
+            <p class="month-income">$2,167.56</p>
+            <p class="month-measured">April</p>
+            <div class="color-bar-1"></div>
+            <div class="color-bar-2"></div>
+            <div class="color-bar-3"></div>
+            <div class="color-bar-4"></div>
+        </div>
+
+        <hr class="income-month-separator">
+
+        <div class="income-distribution">
+            <p class="month-income">$1,360.50</p>
+            <p class="month-measured">March</p>
+            <div class="color-bar-5"></div>
+            <div class="color-bar-6"></div>
+            <div class="color-bar-7"></div>
+            <div class="color-bar-8"></div>
+        </div>
+
+    </article>
     
 </body>
 </html>
