Cambios en el HTML para adaptarlo confomen surgian ideas en css, finalizacion del primer cuadro de UI en css, incorporacion de nuevas imagenes

--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 <body>
     <article class="ui-box-1">
         <header>
-            <img src="" alt="" class="first-ui-face-image">
-            <p class="name-person">Joseph Anderson</p>
-            <p class="time-posted">Posted 2h ago</p>
-            <button class="like-button"></button>
+            <img src="img/man-cropped-img.jpg" alt="man-looking-to-the-left" class="first-ui-face-image">
+            <div class="name-post-time-container">
+                <p class="name-person">Joseph Anderson</p>
+                <p class="time-posted">Posted 2h ago</p>
+            </div>
+            <button class="like-button"><img src="img/suit-heart-fill.svg" alt="hearth"></button>
         </header>
 
         <section class="first-ui-top">
             <h2>Looking for SM manager to create posts across various platforms</h2>
-            <p>We're seeking a skilled Social Media Manager to...</p>
+            <p class="text-below-h2">We're seeking a skilled Social Media Manager to...</p>
+
             <footer class="tags-footer-first-ui">
                 <p class="tags-text">SMM</p>
                 <p class="tags-text">Growth Strategy</p>
@@ -34,7 +37,7 @@
             <p class="work-method">Hourly rate</p>
             <p class="work-method">•</p>
             <p class="work-method">100% Remote</p>
-            <button class="apply-button"><img src="" alt="" class="lighting-icon">Apply</button>
+            <button class="apply-button"><img src="img/lightning-charge-fill.svg" alt="lighting-icon" class="lighting-icon">Apply</button>
         </section>
     </article>
 
