añadi la sombra de las 2 primeras cajas, añadi la imagen de una flecha para abajo, y empece con la segunda caja, finalizando su header

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2 class="second-ui-title">Stats</h2>
             <button class="stats-button">
                 <p>All Time</p>
-                <img src="" alt="" class="arrow-down">
+                <img src="img/chevron-down.svg" alt="arrow-down" class="arrow-down">
             </button>
         </header>
 
