Termine el segundo cuadro de la pagina e agregue algunas clases en el archivo HTML

--- a/index.html
+++ b/index.html
@@ -51,30 +51,30 @@
         </header>
 
         <section class="earnings-section">
-            <h3 class="earnings-title">Earning</h3>
+            <h3 class="earnings-title">Earnings</h3>
             <p class="amount-earn">$9,787<span>.32</span></p>
             <p class="month-earned"><span>+$2,456.12</span> since last month</p>
         </section>
 
         <section class="data-section">
             <div class="projects-clients">
-                <p><span>36</span> projects</p>
-                <p><span>5</span> this month</p>
+                <p class="fisrt-text"><span class="first-number">36</span> projects</p>
+                <p class="second-text"><span class="second-number">5</span> this month</p>
             </div>
 
             <div class="projects-clients">
-                <p><span>10</span> clients</p>
-                <p><span>3</span> this month</p>
+                <p class="fisrt-text"><span class="first-number">10</span> clients</p>
+                <p class="second-text"><span class="second-number">3</span> this month</p>
             </div>
 
             <div class="freelance-place">
                 <p>5th place</p>
                 <p>top-hire freelances</p>
-                <img src="" alt="">
+                <img src="img/hojas-laurel-icono-fondo-blanco_24640-133894-removebg-preview.png" alt="">
             </div>
         </section>
 
-        <footer>
+        <footer class="colors-section">
             <p>Availability</p>
             <div class="colors-container">
                 <div class="color-gradient-1"></div>
@@ -109,7 +109,7 @@
                 <div class="color-gradient-30"></div>
             </div>
 
-            <p>100h/month</p>
+            <p class="footer-last-text">100h/month</p>
         </footer>
     </article>
 
