Termine el 3er cuadro de css

--- a/index.html
+++ b/index.html
@@ -8,148 +8,151 @@
     <title>UI components</title>
 </head>
 <body>
-    <article class="ui-box-1">
-        <header>
-            <img src="img/man-cropped-img.jpg" alt="man-looking-to-the-left" class="first-ui-face-image">
-            <div class="name-post-time-container">
-                <p class="name-person">Joseph Anderson</p>
-                <p class="time-posted">Posted 2h ago</p>
-            </div>
-            <button class="like-button"><img src="img/suit-heart-fill.svg" alt="hearth"></button>
-        </header>
+    <main class="boxes-container">
+        <article class="box ui-box-1">
+            <header>
+                <img src="img/man-cropped-img.jpg" alt="man-looking-to-the-left" class="first-ui-face-image">
+                <div class="name-post-time-container">
+                    <p class="name-person">Joseph Anderson</p>
+                    <p class="time-posted">Posted 2h ago</p>
+                </div>
+                <button class="like-button"><img src="img/suit-heart-fill.svg" alt="hearth"></button>
+            </header>
 
-        <section class="first-ui-top">
-            <h2>Looking for SM manager to create posts across various platforms</h2>
-            <p class="text-below-h2">We're seeking a skilled Social Media Manager to...</p>
+            <section class="first-ui-top">
+                <h2>Looking for SM manager to create posts across various platforms</h2>
+                <p class="text-below-h2">We're seeking a skilled Social Media Manager to...</p>
 
-            <footer class="tags-footer-first-ui">
-                <p class="tags-text">SMM</p>
-                <p class="tags-text">Growth Strategy</p>
-                <p class="tags-text">Startup</p>
-                <p class="tags-text">Brand</p>
+                <footer class="tags-footer-first-ui">
+                    <p class="tags-text">SMM</p>
+                    <p class="tags-text">Growth Strategy</p>
+                    <p class="tags-text">Startup</p>
+                    <p class="tags-text">Brand</p>
+                </footer>
+            </section>
+
+            <hr class="first-ui-separator">
+
+            <section class="first-ui-bottom">
+                <p class="price-hour">$150-$200/h</p>
+                <p class="work-method">Hourly rate</p>
+                <p class="work-method">•</p>
+                <p class="work-method">100% Remote</p>
+                <button class="apply-button"><img src="img/lightning-charge-fill.svg" alt="lighting-icon" class="lighting-icon">Apply</button>
+            </section>
+        </article>
+
+        <article class="box ui-box-2">
+            <header>
+                <h2 class="second-ui-title">Stats</h2>
+                <button class="stats-button">
+                    <p>All Time</p>
+                    <img src="img/chevron-down.svg" alt="arrow-down" class="arrow-down">
+                </button>
+            </header>
+
+            <section class="earnings-section">
+                <h3 class="earnings-title">Earnings</h3>
+                <p class="amount-earn">$9,787<span>.32</span></p>
+                <p class="month-earned"><span>+$2,456.12</span> since last month</p>
+            </section>
+
+            <section class="data-section">
+                <div class="projects-clients">
+                    <p class="fisrt-text"><span class="first-number">36</span> projects</p>
+                    <p class="second-text"><span class="second-number">5</span> this month</p>
+                </div>
+
+                <div class="projects-clients">
+                    <p class="fisrt-text"><span class="first-number">10</span> clients</p>
+                    <p class="second-text"><span class="second-number">3</span> this month</p>
+                </div>
+
+                <div class="freelance-place">
+                    <p>5th place</p>
+                    <p>top-hire freelances</p>
+                    <img src="img/hojas-laurel-icono-fondo-blanco_24640-133894-removebg-preview.png" alt="">
+                </div>
+            </section>
+
+            <footer class="colors-section">
+                <p>Availability</p>
+                <div class="colors-container">
+                    <div class="color-gradient-1"></div>
+                    <div class="color-gradient-2"></div>
+                    <div class="color-gradient-3"></div>
+                    <div class="color-gradient-4"></div>
+                    <div class="color-gradient-5"></div>
+                    <div class="color-gradient-6"></div>
+                    <div class="color-gradient-7"></div>
+                    <div class="color-gradient-8"></div>
+                    <div class="color-gradient-9"></div>
+                    <div class="color-gradient-10"></div>
+                    <div class="color-gradient-11"></div>
+                    <div class="color-gradient-12"></div>
+                    <div class="color-gradient-13"></div>
+                    <div class="color-gradient-14"></div>
+                    <div class="color-gradient-15"></div>
+                    <div class="color-gradient-16"></div>
+                    <div class="color-gradient-17"></div>
+                    <div class="color-gradient-18"></div>
+                    <div class="color-gradient-19"></div>
+                    <div class="color-gradient-20"></div>
+                    <div class="color-gradient-21"></div>
+                    <div class="color-gradient-22"></div>
+                    <div class="color-gradient-23"></div>
+                    <div class="color-gradient-24"></div>
+                    <div class="color-gradient-25"></div>
+                    <div class="color-gradient-26"></div>
+                    <div class="color-gradient-27"></div>
+                    <div class="color-gradient-28"></div>
+                    <div class="color-gradient-29"></div>
+                    <div class="color-gradient-30"></div>
+                </div>
+
+                <p class="footer-last-text">100h/month</p>
             </footer>
-        </section>
+        </article>
 
-        <hr class="first-ui-separator">
+        <article class="box ui-box-3">
+            <div class="chain-image-container">
+                <img src="img/chain.png" alt="chain" class="chain-image">
+            </div>
+            <h2>Get new clientes 2x faster</h2>
+            <p>Join us today and unlock opportunities to land new clientes twice as fast!</p>
+            <button>Join now</button>
+        </article>
 
-        <section class="first-ui-bottom">
-            <p class="price-hour">$150-$200/h</p>
-            <p class="work-method">Hourly rate</p>
-            <p class="work-method">•</p>
-            <p class="work-method">100% Remote</p>
-            <button class="apply-button"><img src="img/lightning-charge-fill.svg" alt="lighting-icon" class="lighting-icon">Apply</button>
-        </section>
-    </article>
+        <article class="box ui-box-4">
+            <header>
+                <h2>Income</h2>
+                <button>
+                    <p>Monthly</p>
+                    <img src="" alt="">
+                </button>
+            </header>
 
-    <article class="ui-box-2">
-        <header>
-            <h2 class="second-ui-title">Stats</h2>
-            <button class="stats-button">
-                <p>All Time</p>
-                <img src="img/chevron-down.svg" alt="arrow-down" class="arrow-down">
-            </button>
-        </header>
-
-        <section class="earnings-section">
-            <h3 class="earnings-title">Earnings</h3>
-            <p class="amount-earn">$9,787<span>.32</span></p>
-            <p class="month-earned"><span>+$2,456.12</span> since last month</p>
-        </section>
-
-        <section class="data-section">
-            <div class="projects-clients">
-                <p class="fisrt-text"><span class="first-number">36</span> projects</p>
-                <p class="second-text"><span class="second-number">5</span> this month</p>
+            <div class="income-distribution">
+                <p class="month-income">$2,167.56</p>
+                <p class="month-measured">April</p>
+                <div class="color-bar-1"></div>
+                <div class="color-bar-2"></div>
+                <div class="color-bar-3"></div>
+                <div class="color-bar-4"></div>
             </div>
 
-            <div class="projects-clients">
-                <p class="fisrt-text"><span class="first-number">10</span> clients</p>
-                <p class="second-text"><span class="second-number">3</span> this month</p>
+            <hr class="income-month-separator">
+
+            <div class="income-distribution">
+                <p class="month-income">$1,360.50</p>
+                <p class="month-measured">March</p>
+                <div class="color-bar-5"></div>
+                <div class="color-bar-6"></div>
+                <div class="color-bar-7"></div>
+                <div class="color-bar-8"></div>
             </div>
 
-            <div class="freelance-place">
-                <p>5th place</p>
-                <p>top-hire freelances</p>
-                <img src="img/hojas-laurel-icono-fondo-blanco_24640-133894-removebg-preview.png" alt="">
-            </div>
-        </section>
-
-        <footer class="colors-section">
-            <p>Availability</p>
-            <div class="colors-container">
-                <div class="color-gradient-1"></div>
-                <div class="color-gradient-2"></div>
-                <div class="color-gradient-3"></div>
-                <div class="color-gradient-4"></div>
-                <div class="color-gradient-5"></div>
-                <div class="color-gradient-6"></div>
-                <div class="color-gradient-7"></div>
-                <div class="color-gradient-8"></div>
-                <div class="color-gradient-9"></div>
-                <div class="color-gradient-10"></div>
-                <div class="color-gradient-11"></div>
-                <div class="color-gradient-12"></div>
-                <div class="color-gradient-13"></div>
-                <div class="color-gradient-14"></div>
-                <div class="color-gradient-15"></div>
-                <div class="color-gradient-16"></div>
-                <div class="color-gradient-17"></div>
-                <div class="color-gradient-18"></div>
-                <div class="color-gradient-19"></div>
-                <div class="color-gradient-20"></div>
-                <div class="color-gradient-21"></div>
-                <div class="color-gradient-22"></div>
-                <div class="color-gradient-23"></div>
-                <div class="color-gradient-24"></div>
-                <div class="color-gradient-25"></div>
-                <div class="color-gradient-26"></div>
-                <div class="color-gradient-27"></div>
-                <div class="color-gradient-28"></div>
-                <div class="color-gradient-29"></div>
-                <div class="color-gradient-30"></div>
-            </div>
-
-            <p class="footer-last-text">100h/month</p>
-        </footer>
-    </article>
-
-    <article class="ui-box-3">
-        <img src="" alt="">
-        <h2>Get new clientes 2x faster</h2>
-        <p>Join us today and unlock opportunities to land new clientes twice as fast!</p>
-        <button>Join now</button>
-    </article>
-
-    <article class="ui-box-4">
-        <header>
-            <h2>Income</h2>
-            <button>
-                <p>Monthly</p>
-                <img src="" alt="">
-            </button>
-        </header>
-
-        <div class="income-distribution">
-            <p class="month-income">$2,167.56</p>
-            <p class="month-measured">April</p>
-            <div class="color-bar-1"></div>
-            <div class="color-bar-2"></div>
-            <div class="color-bar-3"></div>
-            <div class="color-bar-4"></div>
-        </div>
-
-        <hr class="income-month-separator">
-
-        <div class="income-distribution">
-            <p class="month-income">$1,360.50</p>
-            <p class="month-measured">March</p>
-            <div class="color-bar-5"></div>
-            <div class="color-bar-6"></div>
-            <div class="color-bar-7"></div>
-            <div class="color-bar-8"></div>
-        </div>
-
-    </article>
-    
+        </article>
+    </main>
 </body>
 </html>
