Termine el 4to cuadro de css

--- a/index.html
+++ b/index.html
@@ -128,28 +128,28 @@
                 <h2>Income</h2>
                 <button>
                     <p>Monthly</p>
-                    <img src="" alt="">
+                    <img src="img/chevron-down copy.svg" alt="">
                 </button>
             </header>
 
             <div class="income-distribution">
                 <p class="month-income">$2,167.56</p>
-                <p class="month-measured">April</p>
                 <div class="color-bar-1"></div>
                 <div class="color-bar-2"></div>
                 <div class="color-bar-3"></div>
                 <div class="color-bar-4"></div>
+                <p class="month-measured">April</p>
             </div>
 
             <hr class="income-month-separator">
 
             <div class="income-distribution">
                 <p class="month-income">$1,360.50</p>
-                <p class="month-measured">March</p>
                 <div class="color-bar-5"></div>
                 <div class="color-bar-6"></div>
                 <div class="color-bar-7"></div>
                 <div class="color-bar-8"></div>
+                <p class="month-measured">March</p>
             </div>
 
         </article>
