Finalizacion completa, se agregaron ultimos detalles en css como hovers para finalizar

--- a/index.html
+++ b/index.html
@@ -78,36 +78,36 @@
             <footer class="colors-section">
                 <p>Availability</p>
                 <div class="colors-container">
-                    <div class="color-gradient-1"></div>
-                    <div class="color-gradient-2"></div>
-                    <div class="color-gradient-3"></div>
-                    <div class="color-gradient-4"></div>
-                    <div class="color-gradient-5"></div>
-                    <div class="color-gradient-6"></div>
-                    <div class="color-gradient-7"></div>
-                    <div class="color-gradient-8"></div>
-                    <div class="color-gradient-9"></div>
-                    <div class="color-gradient-10"></div>
-                    <div class="color-gradient-11"></div>
-                    <div class="color-gradient-12"></div>
-                    <div class="color-gradient-13"></div>
-                    <div class="color-gradient-14"></div>
-                    <div class="color-gradient-15"></div>
-                    <div class="color-gradient-16"></div>
-                    <div class="color-gradient-17"></div>
-                    <div class="color-gradient-18"></div>
-                    <div class="color-gradient-19"></div>
-                    <div class="color-gradient-20"></div>
-                    <div class="color-gradient-21"></div>
-                    <div class="color-gradient-22"></div>
-                    <div class="color-gradient-23"></div>
-                    <div class="color-gradient-24"></div>
-                    <div class="color-gradient-25"></div>
-                    <div class="color-gradient-26"></div>
-                    <div class="color-gradient-27"></div>
-                    <div class="color-gradient-28"></div>
-                    <div class="color-gradient-29"></div>
-                    <div class="color-gradient-30"></div>
+                    <div class="color-gradient-1 color-gradient-container"></div>
+                    <div class="color-gradient-2 color-gradient-container"></div>
+                    <div class="color-gradient-3 color-gradient-container"></div>
+                    <div class="color-gradient-4 color-gradient-container"></div>
+                    <div class="color-gradient-5 color-gradient-container"></div>
+                    <div class="color-gradient-6 color-gradient-container"></div>
+                    <div class="color-gradient-7 color-gradient-container"></div>
+                    <div class="color-gradient-8 color-gradient-container"></div>
+                    <div class="color-gradient-9 color-gradient-container"></div>
+                    <div class="color-gradient-10 color-gradient-container"></div>
+                    <div class="color-gradient-11 color-gradient-container"></div>
+                    <div class="color-gradient-12 color-gradient-container"></div>
+                    <div class="color-gradient-13 color-gradient-container"></div>
+                    <div class="color-gradient-14 color-gradient-container"></div>
+                    <div class="color-gradient-15 color-gradient-container"></div>
+                    <div class="color-gradient-16 color-gradient-container"></div>
+                    <div class="color-gradient-17 color-gradient-container"></div>
+                    <div class="color-gradient-18 color-gradient-container"></div>
+                    <div class="color-gradient-19 color-gradient-container"></div>
+                    <div class="color-gradient-20 color-gradient-container"></div>
+                    <div class="color-gradient-21 color-gradient-container"></div>
+                    <div class="color-gradient-22 color-gradient-container"></div>
+                    <div class="color-gradient-23 color-gradient-container"></div>
+                    <div class="color-gradient-24 color-gradient-container"></div>
+                    <div class="color-gradient-25 color-gradient-container"></div>
+                    <div class="color-gradient-26 color-gradient-container"></div>
+                    <div class="color-gradient-27 color-gradient-container"></div>
+                    <div class="color-gradient-28 color-gradient-container"></div>
+                    <div class="color-gradient-29 color-gradient-container"></div>
+                    <div class="color-gradient-30 color-gradient-container"></div>
                 </div>
 
                 <p class="footer-last-text">100h/month</p>
